# cgpa-calculator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Database.h  Menu.h  Student.h  StudentOperations.h
src/: Course.cpp  Course.h  Database.cpp  FileManager.cpp  FileManager.h  Menu.cpp  Student.cpp  Student.h  StudentOperations.cpp  main.cpp
test/: TestCourse.cpp  TestFileManager.cpp  TestMain.cpp  TestStudent.cpp  students.txt
